--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "agent-assist",
   "version": "0.0.0",
   "scripts": {
+    "build:elements": "ng build --configuration production --output-hashing none && node concatenate.js",
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
